# 3dRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Renderer.sln
ConsoleRenderer/: ConsoleRenderer.vcxproj  ConsoleRenderer.vcxproj.filters  depth.raw  main.cpp  out.raw  texture.raw
Renderer/: AssimpBindings.h  BaseController.cpp  BasicMaterial.h  BilinearSampler.cpp  BlinnPhong.cpp  Camera.cpp  Camera.h  DirectionalLight.cpp  DrawNormals.cpp  DrawNormals.h  Globals.cpp  Globals.h  IView.cpp  Kernel.cpp  KeyboardObserver.cpp  MathHelpers.cpp  MathHelpers.h  Mesh.cpp  Mesh.h  Object.cpp  Phong.cpp  Renderer.cpp  Renderer.h  Renderer.vcxproj  Renderer.vcxproj.filters  SDLView.cpp  Texture2D.cpp  Texture2D.h  TexturedUnlitMaterial.cpp  TexturedUnlitMaterial.h  Transform.cpp  UnlitSolidColor.cpp  UnlitSolidColor.h
Renderer/include/: AssimpBindings.h  BaseController.h  BasicMaterial.h  BilinearSampler.h  BlinnPhong.h  Buffer2D.h  Camera.h  Color.h  DirectionalLight.h  DrawNormals.h  FixedDirectional.h  Globals.h  IView.h  Kernel.h  KeyboardObserver.h  Keycodes.h  MathHelpers.h  Mesh.h  Object.cpp  Object.h  Phong.h  Renderer.h  SDLKeysToRendererKeys.h  SDLView.h  SubMesh.h  Texture2D.h  TexturedUnlitMaterial.h  Transform.h  UnlitSolidColor.h
RendererExample/: AmogusController.cpp  AmogusController.h  CameraController.cpp  CameraController.h  main.cpp
RendererTests/: CameraTest.cpp  RendererTest.cpp  RendererTests.vcxproj  RendererTests.vcxproj.filters  main.cpp
copy_to_build_dir/: space.rgba32  texture.rgba32
include/assimp/: config.h
